# GDTracker-EXT

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
tracker/: CMakeLists.txt
tracker/ext/: GDTracker.gdextension  gdtracker.gd  gdtrackerPlugin.gd  libGDTracker.gdextension  plugin.cfg
tracker/src/: GDTracker.cpp  GDTracker.hpp  gdextension_registration.cpp
tracker/src/core/: CMakeLists.txt  Tracker.cpp  Tracker.hpp
tracker/src/cute/: CMakeLists.txt  CuteTracker.cpp  CuteTracker.hpp
tracker/src/godot/: CMakeLists.txt  GDTracker.cpp  GDTracker.hpp  gdextension_registration.cpp  gdextension_registration.hpp
tracker/test/: CMakeLists.txt  main.cpp
